Added error checking for location and failed image requests
TODO
fix permissions denied
broadcast receiver

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.n3023685.gpspractice"
+        applicationId "com.example.n3023685.androidica"
         minSdkVersion 26
         targetSdkVersion 26
         versionCode 1
